# save_state

./: CMakeLists.txt  README.md
src/: save_state.cpp  save_state.hpp
tests/: CMakeLists.txt  save_state_test_data.hpp
tests/fuzz/: CMakeLists.txt  save_state.cpp
tests/unit/: CMakeLists.txt  save_state.cpp
